fix: mobile view width would overflow and cause viewport errors

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,5 +1,7 @@
 @import "./shared/styles/media-query.less";
-
+// * {
+//   outline: 1px solid red; /* helps visualize layout issues */
+// }
 .main-container {
   display: grid;
   min-height: 101vh;
@@ -28,7 +30,7 @@
 
   .body-section {
     grid-area: Body;
-    padding: 0 5rem;
+    padding: 0 2rem;
   }
 
   .footer-section {
@@ -48,6 +50,11 @@
 
 @media @mobile {
   .main-container {
+    .body-section {
+      margin: 0;
+      padding: 0;
+    }
+
     .sidebar-component {
       display: none;
     }
