--- a/src/app/components/category-list/category-list.component.less
+++ b/src/app/components/category-list/category-list.component.less
@@ -65,8 +65,12 @@
       margin-top: 1rem;
       padding: 0;
       background: transparent;
-      .category-item {
-        border-radius: 0;
+      .item-container {
+        padding: 1rem 5rem;
+        .category-item {
+          border-radius: 0;
+          margin-bottom: 0.5rem;
+        }
       }
     }
   }
