--- a/src/app/pages/product-details/product-details.component.less
+++ b/src/app/pages/product-details/product-details.component.less
@@ -11,7 +11,6 @@
   margin: 5rem;
 
   .product-details {
-    margin: 0 5rem;
     display: flex;
     gap: 2rem;
     background: @color-secondary;
@@ -30,7 +29,7 @@
       max-width: 500px;
 
       .main-image {
-        width: 500px;
+        width: 100%;
         height: 500px;
         object-fit: cover;
         margin-bottom: @spacing;
@@ -127,10 +126,21 @@
     }
   }
 
+  @media @tablet-m {
+    .product-details {
+      flex-direction: column;
+      margin: 0;
+    }
+    max-width: 70vw;
+  }
+
   @media @mobile {
     flex-direction: column;
+    margin: 0;
+
     .product-details {
       margin: 0 1rem;
+      flex-direction: column;
     }
 
     .related-products {
@@ -176,13 +186,11 @@
           }
         }
         &.hidden {
-          transition: all 0.5s cubic-bezier(0.25, 1, 0.5, 1);
           transform: translate(-100%);
           visibility: hidden;
           pointer-events: none;
         }
         &.visible {
-          transition: all 0.5s cubic-bezier(0.25, 1, 0.5, 1);
           transform: translate(0);
           visibility: visible;
           pointer-events: inherit;
